# python-client-wishlist

./: .gitlab-ci.yml  .travis.yml  README.md  git_push.sh  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: ListWishlistsRequestFilter.md  ProtobufAny.md  RpcStatus.md  WishlistAddItemToWishlistRequest.md  WishlistApi.md  WishlistAreItemsInWishlistsRequest.md  WishlistAreItemsInWishlistsResponse.md  WishlistAreItemsInWishlistsResponsePayload.md  WishlistBulkCreateSharingRequest.md  WishlistBulkCreateSharingResponse.md  WishlistBulkRemoveItemsFromWishlistsRequest.md  WishlistBulkRevokeSharingRequest.md  WishlistCreateWishlistRequest.md  WishlistDeleteWishlistRequest.md  WishlistGetItemFromWishlistRequest.md  WishlistGetWishlistByIdRequest.md  WishlistGetWishlistBySharedCodeRequest.md  WishlistListWishlistItemsRequest.md  WishlistListWishlistItemsResponse.md  WishlistListWishlistsRequest.md  WishlistListWishlistsResponse.md  WishlistLocalizedText.md  WishlistMergeWishlistsRequest.md  WishlistPermission.md  WishlistPrivacy.md  WishlistRemoveItemFromWishlistRequest.md  WishlistSharingRequest.md  WishlistSharingResponse.md  WishlistUpdateItemInWishlistRequest.md  WishlistUpdateItemInWishlistRequestPayload.md  WishlistUpdateWishlistRequest.md  WishlistUpdateWishlistRequestPayload.md  WishlistWishlistItemResponse.md  WishlistWishlistResponse.md
test/: test_list_wishlists_request_filter.py  test_protobuf_any.py  test_rpc_status.py  test_wishlist_add_item_to_wishlist_request.py  test_wishlist_api.py  test_wishlist_are_items_in_wishlists_request.py  (+28 more)
(+42 files in other folders)
